[package]
name = "rfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4.17"
num-traits = "0.2.15"
num-derive = "0.3.3"
rusb = "0.9.1"
env_logger = "0.9.0"
usbip = "0.5.0"
text_io = "0.1.12"
